samples/_failures_safe/1761082265_714d54_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90b1c8b7.c: In function ‘main’:
./samples/SAFE/__tmp_90b1c8b7.c:182:22: error: expected ‘;’ at end of input
  182 |         process_input
      |                      ^
      |                      ;
./samples/SAFE/__tmp_90b1c8b7.c:182:9: error: expected declaration or statement at end of input
  182 |         process_input
      |         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_90b1c8b7.c:182:9: error: expected declaration or statement at end of input
